--- a/app/src/main/res/layout/list_reset_password.xml
+++ b/app/src/main/res/layout/list_reset_password.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:tools="http://schemas.android.com/tools"
+<layout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <data>
@@ -31,7 +31,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:text="User ID "
+                android:text="@string/userid"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -40,7 +40,7 @@
                 android:id="@+id/tv_name_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Nama"
+                android:text="@string/name"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="@+id/tv_userid_text"
                 app:layout_constraintTop_toBottomOf="@+id/tv_userid_text" />
@@ -49,7 +49,7 @@
                 android:id="@+id/tv_1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text=": "
+                android:text="@string/colon"
                 android:textStyle="bold"
                 app:layout_constraintStart_toEndOf="@+id/tv_userid_text"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -58,7 +58,7 @@
                 android:id="@+id/tv_2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text=": "
+                android:text="@string/colon"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="@+id/tv_1"
                 app:layout_constraintTop_toBottomOf="@+id/tv_1" />
