--- a/app/src/main/res/layout/activity_insert_member.xml
+++ b/app/src/main/res/layout/activity_insert_member.xml
@@ -68,7 +68,7 @@
                 android:id="@+id/tv_userid"
                 android:layout_width="250dp"
                 android:layout_height="wrap_content"
-                android:hint="User ID"
+                android:hint="@string/userid"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.621"
                 app:layout_constraintStart_toStartOf="parent"
@@ -89,7 +89,7 @@
                 android:layout_width="250dp"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="5dp"
-                android:hint="Password"
+                android:hint="@string/password"
                 app:layout_constraintStart_toStartOf="@id/tv_userid"
                 app:layout_constraintTop_toBottomOf="@id/tv_userid"
                 app:layout_constraintVertical_bias="0.362">
@@ -109,7 +109,7 @@
                 android:layout_width="250dp"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="5dp"
-                android:hint="Nama"
+                android:hint="@string/name"
                 app:layout_constraintStart_toStartOf="@id/tv_userid"
                 app:layout_constraintTop_toBottomOf="@id/tv_password"
                 app:layout_constraintVertical_bias="0.362">
