--- a/app/src/main/res/layout/layout_change_profile.xml
+++ b/app/src/main/res/layout/layout_change_profile.xml
@@ -19,7 +19,7 @@
             android:id="@+id/tv_name"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:hint="Nama Baru"
+            android:hint="@string/name"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent">
@@ -36,7 +36,7 @@
             android:id="@+id/tv_password"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:hint="Password Baru"
+            android:hint="@string/password"
             android:layout_marginTop="10dp"
             app:layout_constraintTop_toBottomOf="@+id/tv_name"
             app:layout_constraintStart_toStartOf="@+id/tv_name">
@@ -55,7 +55,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:onClick="@{()->onClick.onClickSubmitButton(user)}"
-            android:text="Kirim"
+            android:text="@string/submit"
             app:layout_constraintTop_toBottomOf="@id/tv_password"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginTop="30dp"
