--- a/app/src/main/res/layout/layout_logout_confirmation.xml
+++ b/app/src/main/res/layout/layout_logout_confirmation.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
@@ -17,7 +18,7 @@
             android:textAlignment="center"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             android:textColor="@color/white"
-            android:textSize="20dp" />
+            android:textSize="20sp" />
 
     </FrameLayout>
 
@@ -58,23 +59,27 @@
                     android:layout_height="wrap_content"
                     android:background="@drawable/rounded_button"
                     android:textColor="@color/white"
-                    android:drawableLeft="@drawable/ic_yes"
+                    android:drawableStart="@drawable/ic_yes"
                     android:clickable="true"
                     android:text="Ya"
                     android:textStyle="bold"
-                    android:layout_marginRight="20dp"/>
+                    android:layout_marginEnd="20dp"
+                    android:focusable="true"
+                    tools:ignore="ButtonStyle" />
 
                 <Button
                     android:id="@+id/btn_no"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
+                    android:layout_marginStart="5dp"
                     android:background="@drawable/rounded_button"
                     android:textColor="@color/white"
-                    android:drawableLeft="@drawable/ic_no"
+                    android:drawableStart="@drawable/ic_no"
                     android:clickable="true"
                     android:text="Tidak"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    android:focusable="true"
+                    tools:ignore="ButtonStyle" />
             </LinearLayout>
 
         </LinearLayout>
