--- a/app/src/main/res/layout/layout_request_reset_password.xml
+++ b/app/src/main/res/layout/layout_request_reset_password.xml
@@ -19,7 +19,7 @@
             android:id="@+id/tv_userid"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:hint="User ID"
+            android:hint="@string/userid"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent">
@@ -37,7 +37,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:onClick="@{()->onClick.onClickSubmitButton(resetPass)}"
-            android:text="Kirim"
+            android:text="@string/submit"
             app:layout_constraintTop_toBottomOf="@id/tv_userid"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginTop="30dp"
