--- a/app/src/main/res/layout/layout_update_user.xml
+++ b/app/src/main/res/layout/layout_update_user.xml
@@ -19,7 +19,7 @@
             android:id="@+id/tv_userid"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:hint="Userid"
+            android:hint="@string/userid"
             android:layout_marginTop="20dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -37,7 +37,7 @@
             android:id="@+id/tv_name"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:hint="Nama"
+            android:hint="@string/name"
             app:layout_constraintStart_toStartOf="@id/tv_userid"
             app:layout_constraintTop_toBottomOf="@id/tv_userid">
 
@@ -53,7 +53,7 @@
             android:id="@+id/tv_password"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:hint="Password"
+            android:hint="@string/password"
             app:layout_constraintStart_toStartOf="@id/tv_userid"
             app:layout_constraintTop_toBottomOf="@id/tv_name">
 
@@ -70,7 +70,7 @@
             android:id="@+id/btnSubmit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="KIRIM"
+            android:text="@string/submit"
             app:layout_constraintTop_toBottomOf="@id/tv_password"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginTop="30dp"
