--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,6 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
     <data>
+        <import type="android.text.InputType"/>
         <variable
             name="user"
             type="example.com.absensiapp.model.UserModel" />
@@ -73,7 +74,8 @@
             android:hint="@string/shr_hint_password"
             app:layout_constraintStart_toStartOf="@id/tv_userid"
             app:layout_constraintTop_toBottomOf="@id/tv_userid"
-            app:layout_constraintVertical_bias="0.362">
+            app:layout_constraintVertical_bias="0.362"
+            app:passwordToggleEnabled="true">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/et_password"
@@ -107,5 +109,6 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/btn_login"/>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
