--- a/app/src/main/res/layout/layout_override_request.xml
+++ b/app/src/main/res/layout/layout_override_request.xml
@@ -75,13 +75,12 @@
             android:id="@+id/et_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="36dp"
             android:layout_marginBottom="20dp"
             android:ems="10"
             android:inputType="time"
             android:focusable="false"
             app:layout_constraintBottom_toTopOf="@id/btn_request"
-            app:layout_constraintStart_toEndOf="@id/tv_time"
+            app:layout_constraintStart_toStartOf="@+id/et_date"
             android:text="@={overrideInput.times}"
             tools:ignore="Autofill,LabelFor" />
 
