--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -21,9 +21,9 @@
             android:id="@+id/title_logo"
             android:layout_width="wrap_content"
             android:layout_height="200dp"
-            android:src="@drawable/bca_logo"
+            android:src="@drawable/jdl_logo"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="70dp"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
@@ -31,7 +31,7 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="310dp"
+            android:layout_marginTop="330dp"
             android:layout_marginEnd="8dp"
             android:src="@drawable/ic_person_blue"
             app:layout_constraintEnd_toStartOf="@id/tv_userid"
@@ -40,7 +40,7 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="390dp"
+            android:layout_marginTop="410dp"
             android:layout_marginEnd="8dp"
             android:src="@drawable/ic_lock_blue"
             app:layout_constraintEnd_toStartOf="@id/tv_password"
@@ -51,7 +51,7 @@
             android:layout_width="250dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="90dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="40dp"
             android:hint="@string/shr_hint_userid"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/title_logo">
