--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -27,8 +27,7 @@
             android:layout_marginEnd="1dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/recycler_view_history">
+            app:layout_constraintTop_toTopOf="parent">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/search_window"
@@ -89,14 +88,21 @@
             </androidx.constraintlayout.widget.ConstraintLayout>
         </FrameLayout>
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recycler_view_history"
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="620dp"
-            android:paddingBottom="50dp"
+            android:layout_height="match_parent"
+            android:id="@+id/recycler_view_scrollview"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/fragment_search" />
+            app:layout_constraintTop_toBottomOf="@+id/fragment_search"
+            android:layout_marginTop="120dp">
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recycler_view_history"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+
+                />
+        </ScrollView>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
