--- a/app/src/main/res/layout/list_history.xml
+++ b/app/src/main/res/layout/list_history.xml
@@ -15,7 +15,7 @@
         <androidx.cardview.widget.CardView
             xmlns:card_view="http://schemas.android.com/apk/res-auto"
             android:id="@+id/card_view_dosen"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             card_view:cardCornerRadius="6dp"
             card_view:cardElevation="3dp"
@@ -35,7 +35,7 @@
 
                 <FrameLayout
                     android:id="@+id/date_frame"
-                    android:layout_width="200dp"
+                    android:layout_width="150dp"
                     android:background="@drawable/layout_border"
                     android:layout_height="30dp"
                     card_view:layout_constraintStart_toEndOf="@+id/status_frame"
@@ -47,7 +47,7 @@
                         android:text="@={historyData.outputDate}"
                         android:textStyle="bold"
                         android:layout_marginTop="5dp"
-                        android:layout_marginStart="40dp"
+                        android:layout_marginStart="20dp"
                         android:drawableStart="@drawable/ic_date"/>
                 </FrameLayout>
 
@@ -91,7 +91,7 @@
 
                 <FrameLayout
                     android:id="@+id/status_desc_frame"
-                    android:layout_width="340dp"
+                    android:layout_width="290dp"
                     android:layout_height="25dp"
                     card_view:layout_constraintStart_toStartOf="@+id/date_frame"
                     card_view:layout_constraintTop_toBottomOf="@+id/date_frame"
